# kestrel

./: CLAUDE.md  Cargo.toml  REPORT.md  ROADMAP.md  TODO.md
docs/: class.md  fn.md  future.md  (+10 more)
lib/kestrel-compiler/: Cargo.toml  README.md
lib/kestrel-compiler/examples/: basic_compilation.rs  test_module_diagnostics.rs
lib/kestrel-compiler/src/: builder.rs  compilation.rs  lib.rs  source_file.rs
lib/kestrel-semantic-tree/: Cargo.toml
lib/kestrel-semantic-tree-builder/: Cargo.toml
lib/kestrel-semantic-tree-builder/src/: body_resolver.rs  db.rs  debug.rs  diagnostics.rs  lib.rs  local_scope.rs  path_resolver.rs  queries.rs  resolver.rs  tree.rs  type_builder.rs  type_resolver.rs  type_syntax.rs  utils.rs
lib/kestrel-semantic-tree-builder/src/body_resolver/: calls.rs  context.rs  expressions.rs  members.rs  operators.rs  paths.rs  statements.rs  utils.rs
lib/kestrel-semantic-tree-builder/src/builder/: mod.rs  module_validator.rs  tree_builder.rs
lib/kestrel-semantic-tree-builder/src/database/: mod.rs  queries.rs  registry.rs  semantic_db.rs
lib/kestrel-semantic-tree-builder/src/diagnostics/: assignment.rs  call.rs  control_flow.rs  cycles.rs  declaration.rs  member_access.rs  mod.rs  module.rs  operators.rs  protocol.rs  struct_init.rs  type_check.rs  type_resolution.rs  visibility.rs
lib/kestrel-semantic-tree-builder/src/resolution/: binder.rs  local_scope.rs  mod.rs  type_resolver.rs  visibility.rs
lib/kestrel-semantic-tree-builder/src/resolvers/: class.rs  expression.rs  field.rs  fn.rs  function.rs  import.rs  initializer.rs  mod.rs  module.rs  protocol.rs  struct.rs  type_alias.rs  type_parameter.rs
lib/kestrel-semantic-tree-builder/src/syntax/: helpers.rs  mod.rs
lib/kestrel-semantic-tree-builder/src/validation/: assignment_validation.rs  conformance.rs  constraint_cycles.rs  dead_code.rs  duplicate_symbol.rs  exhaustive_return.rs  function_body.rs  generics.rs  imports.rs  initializer_verification.rs  mod.rs  protocol_method.rs  static_context.rs  struct_cycles.rs  type_alias_cycles.rs  type_check.rs  visibility_consistency.rs
lib/kestrel-semantic-tree/src/: behavior_ext.rs  error.rs  expr.rs  language.rs  lib.rs  operators.rs  pattern.rs  stmt.rs
lib/kestrel-semantic-tree/src/behavior/: callable.rs  conformances.rs  executable.rs  function_data.rs  generics.rs  member_access.rs  mod.rs  typed.rs  valued.rs  visibility.rs
lib/kestrel-semantic-tree/src/symbol/: class.rs  expression.rs  field.rs  fn.rs  function.rs  import.rs  initializer.rs  kind.rs  local.rs  mod.rs  module.rs  protocol.rs  source_file.rs  struct.rs  type_alias.rs  type_parameter.rs
lib/kestrel-semantic-tree/src/ty/: kind.rs  mod.rs  substitutions.rs  where_clause.rs
lib/kestrel-test-suite/: Cargo.toml
lib/kestrel-test-suite/src/: lib.rs
lib/kestrel-test-suite/tests/: README.md  body_resolution.rs  classes.rs  expressions.rs  functions.rs  generics.rs  imports.rs  mod.rs  mutability.rs  operators.rs  paths.rs  protocols.rs  structs.rs  test_suite_features.rs  type_aliases.rs  validation.rs
lib/kestrel-test-suite/tests/declarations/: functions.rs  imports.rs  mod.rs  protocols.rs  structs.rs  type_aliases.rs
lib/kestrel-test-suite/tests/expressions/: body_literals.rs  control_flow.rs  field_access.rs  loops.rs  mod.rs  operators.rs  paths.rs  returns.rs
lib/kestrel-test-suite/tests/framework/: mod.rs
lib/kestrel-test-suite/tests/instantiation/: expressions.rs  mod.rs
lib/kestrel-test-suite/tests/statements/: assignments.rs  mod.rs  variables.rs
lib/kestrel-test-suite/tests/types/: generics.rs  literals.rs  mod.rs
(+245 files in other folders)
