[package]
name = "kestrel-semantic-tree"
version = "0.5.0"
edition = "2024"

[dependencies]
kestrel-span = { path = "../kestrel-span" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
semantic-tree = { path = "../semantic-tree" }
downcast-rs = "2.0.2"